<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:textStyle="bold|italic" android:id="@id/textView5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtUsuario" android:textAlignment="viewStart" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView10" />
    <TextView android:textSize="18.0sp" android:textStyle="bold|italic" android:id="@id/textView6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtContraseña" android:textAlignment="viewStart" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView5" />
    <TextView android:textSize="18.0sp" android:textStyle="bold|italic" android:id="@id/textView7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtBandera" android:textAlignment="viewStart" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView6" />
    <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/etUserSol" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/txtUsuarioPista" android:ems="10" android:inputType="textPersonName" android:textAlignment="viewStart" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textView5" app:layout_constraintTop_toTopOf="@id/textView5" />
    <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/etPasswordSol" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/txtContraseñaPista" android:ems="10" android:inputType="textPersonName" android:textAlignment="viewStart" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView6" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textView6" app:layout_constraintTop_toTopOf="@id/textView6" />
    <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/etBandera" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/txtBanderaPista" android:ems="10" android:inputType="textPersonName" android:textAlignment="viewStart" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView7" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textView7" app:layout_constraintTop_toTopOf="@id/textView7" />
    <Button android:textSize="14.0sp" android:id="@id/btnSolucion" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:text="@string/btnSol" android:drawableLeft="@android:drawable/ic_menu_save" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView7" />
    <TextView android:textSize="14.0sp" android:textColor="@color/colorAccent" android:id="@id/tvInforme" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtInstFinal" android:textAlignment="center" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnSolucion" />
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:id="@id/textView9" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/introText" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="14.0sp" android:id="@id/textView10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtIntoFinal" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView8" />
    <TextView android:textSize="14.0sp" android:id="@id/textView8" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/txtIntroSol" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toTopOf="@id/textView10" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView9" />
    <Button android:id="@id/btnEmail" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/btnEnviar" android:drawableLeft="@android:drawable/ic_menu_send" android:onClick="enviaEmail" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvInforme" />
</android.support.constraint.ConstraintLayout>