<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:textColor="@color/colorPrimaryDark" android:id="@id/textView4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/introText" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:id="@id/textView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtExplica" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView11" />
    <TextView android:textSize="16.0sp" android:textStyle="bold|italic" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/txtUsuario" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView" />
    <TextView android:textSize="16.0sp" android:textStyle="bold|italic" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/txtContraseña" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etUserSol" />
    <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/etUserSol" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/txtUsuarioPista" android:ems="10" android:inputType="textPersonName" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textView2" app:layout_constraintTop_toTopOf="@id/textView2" />
    <EditText android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/etPasswordSol" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:inputType="textPassword" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textView3" app:layout_constraintTop_toTopOf="@id/textView3" />
    <Button android:id="@id/btnLogin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/lblInicia" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etPasswordSol" />
    <Button android:id="@id/btnCancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/lblCancela" app:layout_constraintEnd_toEndOf="@id/btnLogin" app:layout_constraintStart_toStartOf="@id/btnLogin" app:layout_constraintTop_toBottomOf="@id/btnLogin" />
    <ImageView android:id="@id/ivCesar" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnCancel" app:srcCompat="@android:color/background_light" />
    <TextView android:textSize="12.0sp" android:id="@id/textView11" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/introText2" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView4" />
</android.support.constraint.ConstraintLayout>