<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:id="@id/tvMensaje" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/testMsg" android:textAlignment="center" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/etMsgCiDe" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Spinner android:entries="@array/CifrasDelCesar" android:id="@id/spCifras" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/btnCiDe" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etMsgCiDe" />
    <EditText android:id="@id/etMsgCiDe" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/cideHint" android:ems="10" android:inputType="textPersonName" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@id/spCifras" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvMensaje" />
    <Button android:id="@id/btnCiDe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/testBtn" app:layout_constraintBottom_toTopOf="@id/tvMsgCiDe" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/spCifras" />
    <TextView android:id="@id/tvMsgCiDe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="dsafasdfgfdsgs" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnCiDe" />
</android.support.constraint.ConstraintLayout>